Dark mode highlight fix

--- a/src/assets/css/Comment.css
+++ b/src/assets/css/Comment.css
@@ -74,4 +74,8 @@
   .comment .comment-details {
     color: hsla(0, 100%, 100%, 0.5);
   }
+
+  .comment .comment-text::selection {
+    background-color: darkgoldenrod;
+  }
 }
